--- a/html/css/style.css
+++ b/html/css/style.css
@@ -24,12 +24,18 @@ margin: 0px 150px ;
      color: #bdbcbc;
 
 }
+.a-class:hover{
+    color:  rgb(204, 89, 146);
+    font-weight: bold;
+    text-shadow: 0 5px rgb(28, 23, 32);
+}
 .header-box2{
     gap: 50px;
     display: flex;
     justify-content: center;
 
 }
+
 .hero{
     display:flex;
     justify-content: center;
@@ -44,13 +50,19 @@ margin: 0px 150px ;
     justify-content: center;
     color: #bdbcbc;
 }
-.hero-img{
+.hero-img {
     width: 350px;
     height: 350px;
     padding: 5px;
     border-radius: 200px;
-    align-self: center;
+    /* align-self: center; */
     margin: 20px;
+    transition: opacity 0.5s ease;
+    box-shadow: 2px 2px rgb(204, 89, 146);
+}
+.hero-img:hover{
+    content:url(./Public/photo_2025-12-23_20-44-03.jpg);
+    
 }
 .titleh3{
     margin-top: 30px;
@@ -72,6 +84,10 @@ margin: 0px 150px ;
     border-radius: 10px;
     gap: 70px;
     margin: 0px 20px;
+     box-shadow: 2px 2px rgb(204, 89, 146);
+}
+.btn-ctn:hover{
+    background-color: rgb(204, 89, 146);
 }
 .btn-view{
     text-decoration: none;
@@ -80,7 +96,12 @@ margin: 0px 150px ;
     padding: 10px;
     border-radius: 10px;
     gap: 70px;
+     box-shadow: 2px 2px rgb(204, 89, 146);
 
+}
+.btn-view:hover{
+   background-color: rgb(204, 89, 146);  
+   color:white; 
 }
 .case-title{
     text-align: center;
@@ -125,6 +146,7 @@ margin: 0px 150px ;
     display: flex;
     justify-content: space-around;
    align-items: center;
+   margin: 20px;
   
 
 }
@@ -133,7 +155,44 @@ margin: 0px 150px ;
     height: 150px;
     text-align: center;
     border-radius: 10px;
-     box-shadow: 0 10px 20px rgba(7, 6, 6, 0.2);
+     box-shadow: 2px 5px  rgba(7, 6, 6, 0.2);
+     margin: 5px;
     
    
+}
+.footer-box{
+     background-color: #080808;
+     color: #bdbcbc; 
+     text-align: center;
+     /* display: flex;
+     justify-content: center;
+     align-items: center; */
+}
+.footer1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+}
+.footer-boxt input{
+    margin: 10px;
+    font-size: 14px;
+}
+.footersumit{
+    background-color: #3F8E00;
+    color: white;
+    padding: 10px 35px;
+    margin: 8px;
+    border-radius: 10px;
+    box-shadow: 2px 2px rgb(204, 89, 146);
+
+}
+.footersumit:hover{
+  background-color: rgb(204, 89, 146);  
+}
+.txt input{
+    font-size: 14px;
+    border-radius: 5px;
+
 }
